# math-rl-capstone

./: .gitignore  JOURNAL.md  PROGRESS.md  README.md  pyproject.toml
report/: references.bib  report.bcf-SAVE-ERROR  report.tex  slides.nav  slides.tex  slides.vrb
src/: dataset.py  diversity.py  eval.py  plot.py  plot_extra.py  reward.py  train.py  train_v2.py
tests/: test_reward.py
